servermaster(engine): add list executors api
