# engine/pkg/openapi/apiv1.swagger.json
@@ -9,7 +9,7 @@
       "name": "DataRWService"
     },
     {
-      "name": "Executor"
+      "name": "ExecutorService"
     },
     {
       "name": "BrokerService"
@@ -37,6 +37,61 @@
     "application/json"
   ],
   "paths": {
+    "/api/v1/executors": {
+      "get": {
+        "summary": "ListExecutors lists all executors.\nExecutors will use this API to discover other executors.\nCurrently, we assume that there aren't too many executors.\nIf the number of executors becomes very large in the future,\nwe can consider implement a mechanism to watch the changes of the executors.",
+        "operationId": "Discovery_ListExecutors",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/enginepbListExecutorsResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/googlerpcStatus"
+            }
+          }
+        },
+        "tags": [
+          "Discovery"
+        ]
+      }
+    },
+    "/api/v1/executors/register": {
+      "post": {
+        "operationId": "Discovery_RegisterExecutor",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/enginepbExecutor"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/googlerpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "executor",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/enginepbExecutor"
+            }
+          }
+        ],
+        "tags": [
+          "Discovery"
+        ]
+      }
+    },
     "/api/v1/jobs": {
       "get": {
         "operationId": "JobManager_ListJobs",
@@ -384,6 +439,26 @@
         }
       }
     },
+    "enginepbExecutor": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "readOnly": true
+        },
+        "name": {
+          "type": "string",
+          "description": "name is the readable name of the executor."
+        },
+        "address": {
+          "type": "string"
+        },
+        "capability": {
+          "type": "string",
+          "format": "int64"
+        }
+      }
+    },
     "enginepbGenerateDataResponse": {
       "type": "object",
       "properties": {
@@ -465,6 +540,17 @@
         "CDC",
         "FakeJob"
       ]
+    },
+    "enginepbListExecutorsResponse": {
+      "type": "object",
+      "properties": {
+        "executors": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/enginepbExecutor"
+          }
+        }
+      }
     },
     "enginepbListFilesResponse": {
       "type": "object",
@@ -594,17 +680,6 @@
         "err": {
           "$ref": "#/definitions/enginepbError",
           "title": "error"
-        }
-      }
-    },
-    "enginepbRegisterExecutorResponse": {
-      "type": "object",
-      "properties": {
-        "err": {
-          "$ref": "#/definitions/enginepbError"
-        },
-        "executor_id": {
-          "type": "string"
         }
       }
     },
